--- a/Spring/Photostagram/src/main/resources/templates/chat/main.html
+++ b/Spring/Photostagram/src/main/resources/templates/chat/main.html
@@ -74,7 +74,23 @@
                     </li>
                 </ul>
             </th:block>
-
+            <th:block th:if="${not #lists.isEmpty(rooms2)}" th:each="room2:${rooms2}">
+                <ul>
+                    <input type="hidden" th:value="${room2.no}" name="user_no"/>
+                    <li class="chatMember" >
+                        <th:block th:if="${#strings.isEmpty(room2.members[0].profileImg)}">
+                            <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필사진">
+                        </th:block>
+                        <th:block th:unless="${#strings.isEmpty(room2.members[0].profileImg)}">
+                            <img th:src="@{/thumb/{img}(img=${room2.members[0].profileImg})}" alt="프로필사진">
+                        </th:block>
+                        <div class="profile">
+                            <p><span th:each="member:${room2.members}" th:if="${member.username != user.username}">[[${member.username}]]&nbsp;</span></p>
+                            <p></p>
+                        </div>
+                    </li>
+                </ul>
+            </th:block>
 
         </div>
     </div>
