--- a/Spring/Photostagram/src/main/resources/templates/chat/content.html
+++ b/Spring/Photostagram/src/main/resources/templates/chat/content.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/chatLayout}">
 <th:block layout:fragment="main">
-    <script>
+    <script th:inline="javascript">
       
       $(function(){
   $("#confirm").click(function(){
@@ -29,6 +29,52 @@ $(function(){
   }
 });
 
+    let websocket = new WebSocket("ws://localhost:8080/Photostagram/chat");
+
+    websocket.onmessage = onMessage;
+    websocket.onopen = onOpen;
+    websocket.onclose = onClose;
+
+    let username = [[${#authentication.principal.username}]];
+
+    //on exit chat room
+    function onClose(evt) {
+    console.log("close event : " + evt);
+    }
+
+    //on entering chat room
+    function onOpen(evt) {
+    console.log("open event : " + evt);
+    }
+
+    function onMessage(msg) {
+    var data = JSON.parse(msg.data); // msg를 받으면 data 필드 안에 Json String으로 정보가 있음
+    // 필요한 정보를 Json data에서 추출
+     var senderId = data.senderId;
+     var message = data.message;
+     var time = data.time;
+     var newOne = data.newOne;
+     var outOne = data.outOne;
+    }
+
+    // send a message
+    function send(){
+    let message = $('.chatbox-box-1').val();
+
+        // don't send when content is empty
+        // 채팅 입력 칸이 비어있지 않을 경우만 정보를 Json형태로 전송
+        if(message != "") {
+        let msg = {
+            'receiverId' : receiverId,
+            'message' : message
+        };
+
+            if(message != null) {
+            websocket.send(JSON.stringify(msg));	// websocket handler로 전송(서버로 전송)
+            }
+            message = '';
+        }
+    }
 
 
 $(document).on("click", function(e){  
@@ -43,6 +89,7 @@ $(document).on("click", function(e){
 
         location.href='/Photostagram/chat/content?room_no='+room_no;
     });
+
 
     $('.chatbox-box-1').keydown(function(key) {
         //키의 코드가 13번일 경우 (13번은 엔터키)
@@ -162,12 +209,18 @@ $(document).on("click", function(e){
       </div>
       <div class="wrap">
           <th:block th:if="${not #lists.isEmpty(chats)}" th:each="chat:${chats}">
-              <!--
-                <div class="chat ch1">
-                    <div class="icon"><img class="" src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="계정사진"></div>
-                    <div class="textbox">안녕하세요.</div>
-                </div>-->
               <div class="chat ch2" th:if="${chat.user_no == user.no}">
+                  <div class="textbox">[[${chat.message}]]</div>
+              </div>
+              <div class="chat ch1" th:unless="${chat.user_no == user.no}">
+                  <div class="icon">
+                      <th:block th:if="@{#strings.isEmpty(chat.profileImg)}">
+                          <img class="" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="계정사진">
+                      </th:block>
+                      <th:block th:unless="@{#strings.isEmpty(chat.profileImg)}">
+                          <img class="" th:src="@{/thumb/{img}(img=${chat.profileImg})}" alt="계정사진">
+                      </th:block>
+                  </div>
                   <div class="textbox">[[${chat.message}]]</div>
               </div>
           </th:block>
