--- a/Spring/Photostagram/src/main/resources/templates/layout/chatLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/chatLayout.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
+    <link rel="shortcut icon" th:href="@{/img/favicon.png}" type="image/png">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
     <link
             rel="stylesheet"
