--- a/Spring/Photostagram/src/main/resources/templates/profile/changePass.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/changePass.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--/*
+날짜 : 2023/03/08
+이름 : 조주영
+내용 : 비밀번호 변경 화면
+*/-->
 <html xmlns:th="http://www.thymleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/profileLayout}">
