--- a/Spring/Photostagram/src/main/resources/templates/profile/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--/*
+날짜 : 2023/03/06
+이름 : 조주영
+내용 : 프로필 화면
+*/-->
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/profileLayout}">
@@ -111,6 +116,7 @@
                               </th:block>
                               </a>
                           </div>
+                          <div id="endList"></div>
                       </th:block>
                   </th:block>
               </div>
