--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -88,16 +88,16 @@
 
                   <!------------- 게시글 상단 프로필사진입니다 --------------------->
                   <th:block th:if="${#strings.isEmpty(article.memberVO.profileImg)}">
-                    <a th:href="@{/profile(username=${user.username})}"><img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필이미지"/></a>
+                    <a th:href="@{/profile(username=${article.memberVO.username})}"><img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필이미지"/></a>
                   </th:block>
 
-                  <a th:href="@{/profile(username=${user.username})}"><img th:src="|@{/}thumb/${article.memberVO.profileImg}" alt="프로필이미지"/></a>
+                  <a th:href="@{/profile(username=${article.memberVO.username})}"><img th:src="|@{/}thumb/${article.memberVO.profileImg}" alt="프로필이미지"/></a>
 
                 </div>
                 <div class="user_name">
                   <div class="nick_name m_text">
                     <!------------- 게시글 상단 아이디입니다 --------------------->
-                    <a th:href="@{/profile(username=${user.username})}" th:text="${article.memberVO.username}">letary</a>
+                    <a th:href="@{/profile(username=${article.memberVO.username})}" th:text="${article.memberVO.username}">letary</a>
 
                     <span class="jum">•</span>
 
@@ -120,10 +120,13 @@
             <!-- 게시글 사진 div -->
             <div class="img_section">
               <div class="bx_slider">
+
                 <!------------- 게시글 사진입니다 --------------------->
                 <th:block th:each="thumbImage : ${article.imageVO}">
-                  <img th:src="|@{/}thumb/${thumbImage.thumb}" alt="visual01" />
+                  <img th:src="|@{/}thumb/${thumbImage.thumb}" alt="visual01" /> 
                 </th:block>
+                <video src=""></video>
+                
               </div>
             </div>
 
@@ -161,7 +164,7 @@
                 <div class="comment-detail">
                   <div class="nick_name m_text">
                     <!------------ 게시자 아이디 입니다 ----------->
-                    <a th:href="@{/profile(username=${user.username})}" th:text="${article.memberVO.username}"></a>
+                    <a th:href="@{/profile(username=${article.memberVO.username})}" th:text="${article.memberVO.username}"></a>
                   </div>
                   <!------------- 게시글 내용 입니다 ----------------->
                   <div class="mainContent" style="display: inline-block;">
@@ -178,7 +181,7 @@
                 <div class="reply_user" th:data-no="${comment.no}">
                   <!------- /* 댓글 아이디, 댓글 내용 */------->
                   <input type="hidden" class="reply_no" th:value="${comment.no}">
-                  <a th:href="@{/profile(username=${user.username})}" class="reply_nick" th:text="${comment.username}">j_hlli</a>
+                  <a th:href="@{/profile(username=${comment.memberVO.username})}" class="reply_nick" th:text="${comment.username}">j_hlli</a>
                   <span class="reply_content" th:text="${comment.comment}">강아지가 너무 귀여워요!</span>
                   <!---------------------------------------->
 
@@ -233,12 +236,12 @@
                   <div class="user">
                     <th:block th:if="${#strings.isEmpty(article.memberVO.profileImg)}">
                       <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필이미지"/>
-                      <a href="#" th:text="${article.memberVO.username}"></a>
+                      <a th:href="@{/profile(username=${article.memberVO.username})}" th:text="${article.memberVO.username}"></a>
                     </th:block>
 
                     <th:block th:unless="${#strings.isEmpty(article.memberVO.profileImg)}">
                       <img th:src="|@{/}thumb/${article.memberVO.profileImg}" alt="프로필이미지"/>
-                      <a href="#" th:text="${article.memberVO.username}"></a>
+                      <a th:href="@{/profile(username=${article.memberVO.username})}" th:text="${article.memberVO.username}"></a>
                     </th:block>
 
                     <span>&nbsp;ㆍ</span>&nbsp;
@@ -248,12 +251,12 @@
                   <div class="user-content">
                     <th:block th:if="${#strings.isEmpty(article.memberVO.profileImg)}">
                       <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필이미지"/>
-                      <a th:href="@{/profile(username=${user.username})}" th:text="${article.memberVO.username}"></a>
+                      <a th:href="@{/profile(username=${article.memberVO.username})}" th:text="${article.memberVO.username}"></a>
                     </th:block>
 
                     <th:block th:unless="${#strings.isEmpty(article.memberVO.profileImg)}">
                       <img th:src="|@{/}thumb/${article.memberVO.profileImg}" alt="프로필이미지"/>
-                      <a th:href="@{/profile(username=${user.username})}" th:text="${article.memberVO.username}"></a>
+                      <a th:href="@{/profile(username=${article.memberVO.username})}" th:text="${article.memberVO.username}"></a>
                     </th:block>
 
                     <span>
@@ -384,48 +387,29 @@
 
           <!----- 회원님을 위한 추천 ----->
           <!-- 내가 팔로잉 하지 않은 사람들 -->
-          <article class="recommend">
+          <article class="recommend" style="overflow-y: scroll; height:300px;">
             <header class="reco_header">
               <div>회원님을 위한 추천</div>
               <div class="more">모두 보기</div>
             </header>
+            <th:block th:each="member : ${members}">
+              <div class="thumb_user">
+                <div class="profile_thumb">
 
-            <div class="thumb_user">
-              <div class="profile_thumb">
-                <img src="./img/thumb02.jpg" alt="프로필사진" />
+                  <th:block th:if="${#strings.isEmpty(member.profileImg)}">
+                    <a th:href="@{/profile(username=${user.username})}"><img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필이미지"/></a>
+                  </th:block>
+
+                  <th:block th:unless="${#strings.isEmpty(member.profileImg)}">
+                    <a th:href="@{/profile(username=${user.username})}"><img th:src="|@{/}thumb/${member.profileImg}" alt="프로필이미지"/></a>
+                  </th:block>
+                </div>
+                <div class="detail">
+                  <div class="id" th:text="${member.username}">kind_pizza</div>
+                  <div class="time">1시간 전</div>
+                </div>
               </div>
-              <div class="detail">
-                <div class="id">kind_pizza</div>
-                <div class="time">1시간 전</div>
-              </div>
-            </div>
-            <div class="thumb_user">
-              <div class="profile_thumb">
-                <img src="./img/thumb02.jpg" alt="프로필사진" />
-              </div>
-              <div class="detail">
-                <div class="id">kind_medium</div>
-                <div class="time">1시간 전</div>
-              </div>
-            </div>
-            <div class="thumb_user">
-              <div class="profile_thumb">
-                <img src="./img/thumb02.jpg" alt="프로필사진" />
-              </div>
-              <div class="detail">
-                <div class="id">kind_large</div>
-                <div class="time">1시간 전</div>
-              </div>
-            </div>
-            <div class="thumb_user">
-              <div class="profile_thumb">
-                <img src="./img/thumb02.jpg" alt="프로필사진" />
-              </div>
-              <div class="detail">
-                <div class="id">kind_tigerrrr</div>
-                <div class="time">1시간 전</div>
-              </div>
-            </div>
+            </th:block>
           </article>
 
 
