--- a/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
@@ -29,6 +29,13 @@
     <script th:src="@{/js/post.js}"></script>
     <script th:src="@{/js/counting.js}"></script>
     <script th:src="@{/js/myFollow.js}"></script>
+
+    <!-- bxslider 슬라이더 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 </head>
 <body>
     <main>
