--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -95,7 +95,7 @@
 
                 </div>
                 <div class="user_name">
-                  <div class="nick_name m_text">
+                  <div class="nick_name m_text" >
                     <!------------- 게시글 상단 아이디입니다 --------------------->
                     <a th:href="@{/profile(username=${article.memberVO.username})}" th:text="${article.memberVO.username}">letary</a>
 
@@ -104,10 +104,11 @@
                     <!------------- 게시글 상단 날짜입니다 --------------------->
                     <span class="time noticeTime"></span>
 
-                    <span class="jum">•</span>
-                    <input type="button" class="followBtn" value="팔로우" />
+                    <th:block th:if="${not #strings.equals(user.no,article.user_no)}"><span class="jum">•</span>
+                    <input type="button" class="idxfw idx_followBtn" value="팔로우" th:data-no="${article.user_no}"/>
+                    </th:block>
                   </div>
-                  <div class="country s_text">Seoul, South Korea</div>
+                  <div class="country s_text">Busan, South Korea</div>
                 </div>
               </div>
 
@@ -120,13 +121,20 @@
             <!-- 게시글 사진 div -->
             <div class="img_section">
               <div class="bx_slider">
-
                 <!------------- 게시글 사진입니다 --------------------->
                 <th:block th:each="thumbImage : ${article.imageVO}">
-                  <img th:src="|@{/}thumb/${thumbImage.thumb}" alt="visual01" /> 
+                  <th:block th:if="${#strings.contains(thumbImage.thumb,'.mp4')}">
+                    <video height="590"
+                           width="590"
+                           loop
+                           controls
+                           autoplay th:src="|@{/}thumb/${thumbImage.thumb}">
+                    </video>
+                  </th:block>
+                  <th:block th:unless="${#strings.contains(thumbImage.thumb,'.mp4')}">
+                    <img th:src="|@{/}thumb/${thumbImage.thumb}" alt="visual01" />
+                  </th:block>
                 </th:block>
-                <video src=""></video>
-                
               </div>
             </div>
 
@@ -170,7 +178,7 @@
                   <div class="mainContent" style="display: inline-block;">
                     <div class="commentWord" th:text="${article.content}" style="color: #262626;">내용</div>
                     <th:block th:each="hashtag : ${article.hashTagVO}">
-                      <a href="#" class="hashtag_text" style="color: #00376B;">#[[${hashtag.hashtag}]]</a>
+                      <a th:href="@{/search(no = ${hashtag.no})}" class="hashtag_text" style="color: #00376B;">#[[${hashtag.hashtag}]]</a>
                     </th:block>
                   </div>
                 </div>
@@ -265,8 +273,6 @@
                     </span>
 
                   </div>
-
-
 
                   <!-- modal 댓글 -->
                   <div class="rest">
@@ -404,10 +410,11 @@
                     <a th:href="@{/profile(username=${member.username})}"><img th:src="|@{/}thumb/${member.profileImg}" alt="프로필이미지"/></a>
                   </th:block>
                 </div>
-                <div class="detail">
+                <div class="detail" style="display: inline-block; vertical-align: top;">
                   <a th:href="@{/profile(username=${member.username})}" class="id" th:text="${member.username}">kind_pizza</a>
                   <div class="time">1시간 전</div>
                 </div>
+                <input type="button" class="idxfw idx_followBtn" th:value="팔로우" th:data-no="${member.no}">
               </div>
             </th:block>
           </article>
