--- a/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
@@ -14,7 +14,7 @@
             $(function(){
                // 비교시간
                 let notices = [[${notices}]];
-                let articles = [[${articles}]];
+                //let articles = [[${articles}]];
                 let h = 0;
                 notices.forEach(function(notice, index){
                     let rdate = notice.rdate;
@@ -68,6 +68,7 @@
                         }
                     }
                 });
+/*
                 articles.forEach(function(notice, index){
                     let rdate = notice.rdate;
                     console.log("rdate : "+rdate);
@@ -119,7 +120,7 @@
                             $('.noticeTime')[index].append(h+'주');
                         }
                     }
-                });
+                });*/
             });
         </script>
         <!--sidebar 기본-->
